--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -27,7 +27,7 @@ attention to the market in developing countries.<br>
 
 ### 译文
 
-根据上面的柱状图提供的信息，我们可以看出，从2000年到2008年，发展中国家和发达国家在手机入网方面存在着惊人的对比。在此期间，发展中国家手机入网数从4亿急速增长到
+根据上面的柱状图提供的信息，我们可以看出，从2000年到2008年，发展中国家和发达国家在手机入网方面存在着惊人地对比。在此期间，发展中国家手机入网数从4亿急速增长到
 40 亿，而发达国家的相关数据在10亿之下保持平稳。<br>
 至少有两点主要原因造成了这种现象。一方面，随着发展中国家的经济快速增长这些国家的电信产业大幅扩张以满足全球化的需求。因此，使用手机来缩短人与人之间的距离并与全世界联系的人数以惊人的速度增长。另一方面，发达国家高度发达的经济意味着它们在诸多领域发展潜力较小，他们对进一步开发的需求趋于饱和。<br>
 尽管手机在发展中国家和发达国家已经非常普遍，但这一差距在未来还会继续扩大。因此，手机制造商应该更加关注发展中国家的市场。
@@ -60,8 +60,8 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and clutivating independence account for 15%, 9% and 6% respectively.<br>
-&emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the sencond place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br>
+&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and cultivating independence account for 15%, 9% and 6% respectively.<br>
+&emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the second place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br>
 &emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and ever-increasing pressure of campus life, the number of university students touring will keep growing in the forthcoming decade.
 
 ### 译文
@@ -129,8 +129,8 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;As can be seen from the bar chart above, the express dilivery business in China has increased considerably between 2018 and 2020. During this three-year period, the total number of express delivery parcels jumped markedly from 51 billion to 83 billion. In the meantime, the number of express delivery parcels in ruural areas rose dramatically from 12 billion to 30 billion.<br>
-&emsp;&emsp;Why is the express delivery business booming nowadays? Several factors may contribute to this phenomenon. To start with, the popularity of electronic commerce and online shopping has laid the foundation for the development of the express delivery business. Moreover, as the express delivery business is becoming increasingly mature and relevant laws and regulations are improved, people who were at first skeptical about express delivery sevice now become convinced that it is safe and reliable.<br>
+&emsp;&emsp;As can be seen from the bar chart above, the express delivery business in China has increased considerably between 2018 and 2020. During this three-year period, the total number of express delivery parcels jumped markedly from 51 billion to 83 billion. In the meantime, the number of express delivery parcels in rural areas rose dramatically from 12 billion to 30 billion.<br>
+&emsp;&emsp;Why is the express delivery business booming nowadays? Several factors may contribute to this phenomenon. To start with, the popularity of electronic commerce and online shopping has laid the foundation for the development of the express delivery business. Moreover, as the express delivery business is becoming increasingly mature and relevant laws and regulations are improved, people who were at first skeptical about express delivery service now become convinced that it is safe and reliable.<br>
 &emsp;&emsp;The boom of the express delivery business undoubtedly contributes to the prosperity of China's economy. Accordingly, let us get prepared to embrace this irreversible trend.
 
 ### 译文
@@ -295,7 +295,7 @@ negative effects on consumers and society.
 
 &emsp;&emsp;这个柱状图显示了2017年至2024年中国直播电商的商品交易总额规模。从2017年到2019年，商品交易总额从168亿元温和增长到4168亿元，增长了4000亿元。相比之下，从2019
 年到 2024 年，商品交易总额从 4168 亿元大幅增长到 53166 亿元。<br>
-&emsp;&emsp;直播的繁荣对我们的社会产生了深远的影响。一方面，中国的社交网络涌现出越来越多的网红，这些来自草根阶层的网络名人通过大搞噱头成功地在全国受到追捧。因此，很多消费者愿意通过这些主播的直播进行网上购物，这促进了经济的发展。另一方面，很多直播主播的一些行为会给消费者和青少年传达错误的价值观。一些主播靠谎言和虚假的承诺吸引自己的粉丝。不可否认的是，这会对消费者的价值观造成负面的影响。<br>
+&emsp;&emsp;直播的繁荣对我们的社会产生了深远的影响。一方面，中国的社交网络涌现出越来越多的网红，这些来自草根阶层的网络名人通过大搞噱头成功地在全国受到追捧。因此，很多消费者愿意通过这些主播的直播进行网上购物，这促进了经济的发展。另一方面，很多直播主播的一些行为会给消费者和青少年传达错误的价值观。一些主播靠谎言和虚假地承诺吸引自己的粉丝。不可否认的是，这会对消费者的价值观造成负面的影响。<br>
 &emsp;&emsp;总之，我认为直播是一把双刃剑,既会对消费者和社会造成积极影响,也会造成负面影响。
 
 ## 056
@@ -347,7 +347,7 @@ Write an essay on the chart. In your essay, you should
 ### 译
 
 &emsp;&emsp;上面的线状图清晰地显示了某市2014年至2016年体育馆的数量和锻炼人数。如该图所示锻炼人数从一百万人稳步增加到近两百万人,同时,体育馆数量从600座急剧增加到约860座啓宾挡长了约 260座。<br>
-&emsp;&emsp;几个因素促成了这一趋势。首先，随着都市生活节奏的加快和压力的不断增加，越来越多的人开始面临生理或心理问题。因此，相关部门建造了越来越多的体育馆。其次，对于健康的渴望很普遍。因此，人们各自选择慢跑、打篮球、游泳、滑冰、爬山或骑车作为日常锻炼氡扺方式，因为运动总能使他们更强壮、更精力充沛。<br>
+&emsp;&emsp;几个因素促成了这一趋势。首先，随着都市生活节奏的加快和压力的不断增加，越来越多的人开始面临生理或心理问题。因此，相关部门建造了越来越多的体育馆。其次，对于健康地渴望很普遍。因此，人们各自选择慢跑、打篮球、游泳、滑冰、爬山或骑车作为日常锻炼氡扺方式，因为运动总能使他们更强壮、更精力充沛。<br>
 &emsp;&emsp;就我而言，每天一小时的锻炼通常使我感到更健康而且更有活力。此外，我保持均衡饮食，而且晚上11点之前上床睡觉。总之，所有这些做法可以保证我拥有健康的体魄和橥號乐的生活。
 
 ## 058
@@ -400,15 +400,15 @@ Write an essay on the chart. In your essay, you should
 
 ### Directions
 
-&emsp;&emsp;Read the following excerpt from an article and write an essay. In your essay, you should explainwhether or to what extent you agree with the author, Support your argument with reasons and relevantexamples.
+&emsp;&emsp;Read the following excerpt from an article and write an essay. In your essay, you should explain whether or to what extent you agree with the author, Support your argument with reasons and relevant examples.
 
-&emsp;&emsp;Changing technology stimulates the brain and increases intelligence, But that may onlybe true if technology challenges us. In a world run by intelligent machines, our lives could geta lot simpler, Would that make us less intelligent? Artificial intelligence is taking over manyhuman jobs. For instance, planes are being flown much of the time by automatic pilots. Andthe complex problem of controlling air traffic around large modern airports is also achievedby artificial intelligence that operates well beyond the capability of mere human air trafficcontrollers, Artificial intelligence is embedded in many features of modern life for a simplereason that intelligent machines can already outperform humans, including some aptitudeswhere there was once thought to be a human advantage, such as playing chess, and writingpoetry, or even novels<br>
-&emsp;&emsp;As machines get smarter, they will do more of our thinking for us and make life easier.In the future, the electronic assistant will develop to the point that it serves similar functions as a real living butler, fulfilling requests such as: "Organize a dinner party for six on Thursday, and invite the usual guest." At that point, our long strggle with challenging technologies is at an end. We can take it easy kowning that the hard work of planning and organizing is being done by a better brain-the electronic assistant. Starved with mental effort, our brains well regress.
+&emsp;&emsp;Changing technology stimulates the brain and increases intelligence, But that may only be true if technology challenges us. In a world run by intelligent machines, our lives could geta lot simpler, Would that make us less intelligent? Artificial intelligence is taking over many human jobs. For instance, planes are being flown much of the time by automatic pilots. And the complex problem of controlling air traffic around large modern airports is also achieved by artificial intelligence that operates well beyond the capability of mere human air traffic controllers, Artificial intelligence is embedded in many features of modern life for a simple reason that intelligent machines can already outperform humans, including some aptitudes where there was once thought to be a human advantage, such as playing chess, and writing poetry, or even novels<br>
+&emsp;&emsp;As machines get smarter, they will do more of our thinking for us and make life easier.In the future, the electronic assistant will develop to the point that it serves similar functions as a real living butler, fulfilling requests such as: "Organize a dinner party for six on Thursday, and invite the usual guest." At that point, our long struggle with challenging technologies is at an end. We can take it easy knowing that the hard work of planning and organizing is being done by a better brain-the electronic assistant. Starved with mental effort, our brains well regress.
 
 ### Example
 
 &emsp;&emsp;Currently, great achievements have been made in the field of artificial intelligence, which is taking over a good number of human jobs. In the excerpt, the author assumes that since artificial intelligence can plan and organize for us, our brains will regress. I disagree with the author's opinion.<br>
-&emsp;&emsp;I cling to the idea that even if intelligent machines are getting increasingly smarter, our world will never be like a scene from science fiction in which human brains are infirior. To being with, no matter how superior its abilities are in certain areas, artificial intelligence needs us just as much as we need it. In other words, computer-based artificial intelligence has to rely on humans for maintenance to ensure its existence. What is more, face-to-face interactions between humans can never be replaced by machines. Intelligent machines are unlikely to develop human-like aocial competence, which requires empathy, sensitivity to tone, etc.<br>
+&emsp;&emsp;I cling to the idea that even if intelligent machines are getting increasingly smarter, our world will never be like a scene from science fiction in which human brains are inferior. To begin with, no matter how superior its abilities are in certain areas, artificial intelligence needs us just as much as we need it. In other words, computer-based artificial intelligence has to rely on humans for maintenance to ensure its existence. What is more, face-to-face interactions between humans can never be replaced by machines. Intelligent machines are unlikely to develop human-like social competence, which requires empathy, sensitivity to tone, etc.<br>
 &emsp;&emsp;To sum up, concern about whether artificial intelligence will make our brains regress is caused by an overestimation of the impact of technology on humans.
 
 ### 译
