feat: add 047 and 048 write

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -139,6 +139,52 @@ In this section, you are asked to write an essay based on the following chart. I
 &emsp;&emsp;为什么如今快递业务发展得如此之快呢?可能有几个因素促成了这个现象。首先，电子商务和网上购物的普及为快递业务的发展打下了基础。其次，随着快递业务日趋成熟以及相关法律法规的完善，起初对快递持怀疑态度的人现在也已经相信快递是安全可靠的。快递业务的迅速发展无疑为中国经济的繁荣做出了贡献。<br>
 &emsp;&emsp;因此，让我们准备好欣然接受这一不可逆转的趋势吧。
 
+## 047
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/47.jpg)
+
+### Example
+
+&emsp;&emsp;The diagram above clearly illustrates that a dramatic increase has occurred in the recruitment of Masters of Engineering(ME) in China during the past seven years. In 1998, the number was at a low of only about 2,500. Surprisingly, it reached more than 35,000 in 2004, within no more than seven years.<br>
+&emsp;&emsp;Some driving factors that contribute to the above-mentioned change may be summarized as follows. First and foremost, China has become particularly active in manufacturing, which has led to an increased demand for qualified engineers. In addition, the development of the job market on the whole cannot keep pace with the expansion of college graduates, which has obliged a large number of students to stay on campus for another three years to ge better prepared for their careers.<br>
+&emsp;&emsp;It is necessary for us to take effective measures to ensure this situation doesn't get out of hand, and encourage students to choose majors for which both theoretical knowledge and practical skills will be demanded in the job market.
+
+### 译文
+
+&emsp;&emsp;上面的图表清楚地揭示了过去七年中国的工程硕士招生录取人数急剧增长。1998 年招生人数较少，只有大约2500人。令人惊讶的是，到2004年，招生人数在不到七年的时间里达到了 3.5 万人以上。<br>
+&emsp;&emsp;促成上述变化的一些驱动因素可以概括如下。首先,中国在制造业方面变得异常活跃这使得对高素质工程师的需求增加。此外，就业市场的总体发展无法跟上大学毕业生人数的增加，这促使很多学生在校园里再待三年时间，为就业做更好的准备。<br>
+&emsp;&emsp;我们必须采取有效措施确保这一状况不会失控，同时鼓励学生选择那些就业市场上需憲爀菐頁的务既有理论知识又有实践技能的专业。
+
+## 048
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/48.jpg)
+
+### Example
+
+&emsp;&emsp;The picture vividly depicts a lovely American girl in traditional Chinese costume with a sweet smile on her face. She wears ribbons, necklaces and other accessories that are characteristic of the clothes of a certain Chinese minority group. Undoubtedly, the costume has added oriental charm to her beautiful features.<br>
+&emsp;&emsp;The fact that people from different countries are attracted to the mysterious Chinese culture indicates that to some extent a culture can be accepted, respected, appreciated and shared internationally. In other words, a nation's unique culture can become international through worldwide economic and cultural exchanges. Since the trend of globalization has become irresistible, increasingly frequent cultural exchanges can effectively improve mutual understanding and friendship between countries.<br>
+&emsp;&emsp;It is my view that national culture should be preserved and cherished as a priceless spiritual treasure. Nevertheless, when we are confronted with a different culture, we should be sensible enough to absorb its virtues and to resist its dark side. Only in this way can we promote culture development positively and make our world multidimensional, colorful and vigorous.
+
+### 译文
+
+&emsp;&emsp;这幅图画生动地描绘了一位可爱的美国女孩,她身穿传统的中式服装,面带甜美的微笑。她戴着具有中国某个少数民族服饰特色的发带、项链和其他饰品。毫无疑问，这套服装为她美丽的外表增添了东方的魅力。<br>
+&emsp;&emsp;神秘的中国文化吸引了各国人民这一事实表明，在某种程度上一种文化可以在国际范围内被接受、尊重、欣赏和分享。换言之，一个国家独特的文化可以通过全球性的经济和文化交流走向世界。由于全球化潮流已经不可阻挡，所以日益频繁的文化交流可以有效地增进国家之间的相互理解和友谊。<br>
+&emsp;&emsp;在我看来，我们应该保护和珍惜作为无价的精神财富的民族文化。不过，我们在面对不同文化时,应该足够理智地取其精华、去其糟粕。只有这样我们才能积极推动文化发展使我们的世界丰富多元、多姿多彩、充满活力。
+
 ## 051
 
 ### Directions
