--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -185,6 +185,29 @@ In this section, you are asked to write an essay based on the following chart. I
 &emsp;&emsp;神秘的中国文化吸引了各国人民这一事实表明，在某种程度上一种文化可以在国际范围内被接受、尊重、欣赏和分享。换言之，一个国家独特的文化可以通过全球性的经济和文化交流走向世界。由于全球化潮流已经不可阻挡，所以日益频繁的文化交流可以有效地增进国家之间的相互理解和友谊。<br>
 &emsp;&emsp;在我看来，我们应该保护和珍惜作为无价的精神财富的民族文化。不过，我们在面对不同文化时,应该足够理智地取其精华、去其糟粕。只有这样我们才能积极推动文化发展使我们的世界丰富多元、多姿多彩、充满活力。
 
+## 049
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/49.jpg)
+
+### Example
+
+&emsp;&emsp;It is symbolically illustrated in the cartoon that a striker is preparing to shoot at the goal defended by a goalkeeper on a footer field. In the goldkeeper's mind, he is so much smaller than he actually is that guarding the goal becomes an impossible mission. At the same time, the giant guart seems to fill up the whole goal in the attacking player's mind.<br>
+&emsp;&emsp;The purpose of the drawing is to show us that in the face of seemingly insurmountable challenges or predicaments, possessing self confidence is of the utmost significance. Regardless of how much success one has had in school ar at work, there are bound to be times when he or she will encounter problems. It is at these critical times that one's self-confidence, toward difficulty and toward lefe in general, plays a crucial role in determining whether he or she can turn failure into victory.<br>
+&emsp;&emsp;I can think of no better illustration than the following one. Helen Keller was deaf and blind, certainly nothing to give her self-confidence. Nevertheless, she went on to conquer her multiple handicaps to finally become a writer and lecturer, and an inspiration to all. This case effectively illustrates that no matter what tasks we are confronted with, we should never overestimate the difficulties or underestimate our abilities.
+
+### 译文
+
+&emsp;&emsp;这幅漫画具有象征意味地展示了足球场上的一名前锋正准备将球射入守门员把守的球门。守门员把自己想得比实际的身材渺小得多，以至于守门变成了一项不可能完成的任务。与此同时，在那名前锋看来，这位巨人守门员似乎占据了整个球门。<br>
+&emsp;&emsp;这幅漫画的目的是告诉我们，在看似不可克服的挑战与困境面前，最重要的是拥有自信。无论一个人在学校或工作中曾经如何成功，总有一天他或她会遭遇难题。关键时刻,正是一个人对困难和人生的自信决定他或她能否反败为胜。<br>
+&emsp;&emsp;没有什么比下面的例子更有说服力。海伦·凯勒失去了听力和视力，没什么可以让她自信。但她不断克服多重障碍，最终成为一名作家和教师，成为世人的楷模。这个例子清楚证明了无论面临何种任务，我们决不能高估困难或低估自己的能力。
+
 ## 051
 
 ### Directions
