feat: update template of core word

--- a/english/word/simple-word/markdown/p6-p8.md
+++ b/english/word/simple-word/markdown/p6-p8.md
@@ -268,7 +268,7 @@
     - n. 猎物: The large, slow-growing animals were easy game...
 - him
 - almost
-    - adv. 几乎:
+    - adv. 几乎
     - all + most
     - I have also almost lost my taste for pictures or music.
 - drive
