--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -198,8 +198,8 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;It is symbolically illustrated in the cartoon that a striker is preparing to shoot at the goal defended by a goalkeeper on a footer field. In the goldkeeper's mind, he is so much smaller than he actually is that guarding the goal becomes an impossible mission. At the same time, the giant guart seems to fill up the whole goal in the attacking player's mind.<br>
-&emsp;&emsp;The purpose of the drawing is to show us that in the face of seemingly insurmountable challenges or predicaments, possessing self confidence is of the utmost significance. Regardless of how much success one has had in school ar at work, there are bound to be times when he or she will encounter problems. It is at these critical times that one's self-confidence, toward difficulty and toward lefe in general, plays a crucial role in determining whether he or she can turn failure into victory.<br>
+&emsp;&emsp;It is symbolically illustrated in the cartoon that a striker is preparing to shoot at the goal defended by a goalkeeper on a footer field. In the goalkeeper's mind, he is so much smaller than he actually is that guarding the goal becomes an impossible mission. At the same time, the giant guard seems to fill up the whole goal in the attacking player's mind.<br>
+&emsp;&emsp;The purpose of the drawing is to show us that in the face of seemingly insurmountable challenges or predicaments, possessing self-confidence is of the utmost significance. Regardless of how much success one has had in school ar at work, there are bound to be times when he or she will encounter problems. It is at these critical times that one's self-confidence, toward difficulty and toward life in general, plays a crucial role in determining whether he or she can turn failure into victory.<br>
 &emsp;&emsp;I can think of no better illustration than the following one. Helen Keller was deaf and blind, certainly nothing to give her self-confidence. Nevertheless, she went on to conquer her multiple handicaps to finally become a writer and lecturer, and an inspiration to all. This case effectively illustrates that no matter what tasks we are confronted with, we should never overestimate the difficulties or underestimate our abilities.
 
 ### 译文
