--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -297,10 +297,10 @@ economy.<br>
 
 ### 译文
 
-以上饼状图清楚地显示了2021年中国消费者月均点外卖次数的调研结果。根据数据，在这五组中，点外卖1-5次的人数在这五组中占比最大，占35.2%;点外卖6-10次的人数占比为
+&emsp;&emsp;以上饼状图清楚地显示了2021年中国消费者月均点外卖次数的调研结果。根据数据，在这五组中，点外卖1-5次的人数在这五组中占比最大，占35.2%;点外卖6-10次的人数占比为
 27%。相比之下，从来不点外卖的人仅占18.5%。<br>
-造成上述现象的主要原因如下。首先，随着近年来都市生活节奏的加快以及工作压力的不断增加，比起去餐馆，很多人更喜欢点外卖。其次，为了享受舒适的生活，越来越多的消费者喜欢在公司或家里点外卖，而不是自己做饭。最后，繁荣的外卖行业应该归功于网上购物和快递产业的迅猛发展。<br>
-简言之，快速发展的外卖行业无疑有助于经济的繁荣。<br>
+&emsp;&emsp;造成上述现象的主要原因如下。首先，随着近年来都市生活节奏的加快以及工作压力的不断增加，比起去餐馆，很多人更喜欢点外卖。其次，为了享受舒适的生活，越来越多的消费者喜欢在公司或家里点外卖，而不是自己做饭。最后，繁荣的外卖行业应该归功于网上购物和快递产业的迅猛发展。<br>
+&emsp;&emsp;简言之，快速发展的外卖行业无疑有助于经济的繁荣。<br>
 
 ## 054
 
@@ -330,10 +330,10 @@ Chinese government has fulfilled its promise of lifting all its citizens out of 
 
 ### 译文
 
-上面的图表清楚地揭示了2012年到2020年间中国在扶贫方面取得的巨大成就。在此期间中国的农村贫困人口数量从大约1亿大幅减少到几乎为零，减少了近1亿。与此同时，农村的贫困人口比例从大约
+&emsp;&emsp;上面的图表清楚地揭示了2012年到2020年间中国在扶贫方面取得的巨大成就。在此期间中国的农村贫困人口数量从大约1亿大幅减少到几乎为零，减少了近1亿。与此同时，农村的贫困人口比例从大约
 10%下降到几乎为零。<br>
-促成上述变化的主要因素可以概括如下。首先，中国相关部门结合传统方法和创新方法，帮助改善了农村地区的教育和医疗水平。其次，中国非常重视农村贫困地区的基础设施建设，有效缩小了贫富差距。最后但同样重要的是,这一成就可以归功于过去几十年中国经济的快速发展。<br>
-总之，中国的扶贫战役对本国和世界都极为重要。首先，反贫困的成就让更多的人享受到中国经济繁荣的好处。更重要的是，中国政府已经实现了全民脱贫的承诺。<br>
+&emsp;&emsp;促成上述变化的主要因素可以概括如下。首先，中国相关部门结合传统方法和创新方法，帮助改善了农村地区的教育和医疗水平。其次，中国非常重视农村贫困地区的基础设施建设，有效缩小了贫富差距。最后但同样重要的是,这一成就可以归功于过去几十年中国经济的快速发展。<br>
+&emsp;&emsp;总之，中国的扶贫战役对本国和世界都极为重要。首先，反贫困的成就让更多的人享受到中国经济繁荣的好处。更重要的是，中国政府已经实现了全民脱贫的承诺。<br>
 
 ## 055
 
@@ -476,7 +476,7 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
-&emsp;&emsp;Currently, great achievements have been made in the field of artificial intelligence, which is taking over a good number of human jobs. In the excerpt, the author assumes that since artificial intelligence can plan and organize for us, our brains will regress. I disagree with the author's opinion.<br>
+&emsp;&emsp;Currently, great achievements have been made in the field of artificial intelligence, which is taking over a good number of human jobs. In this excerpt, the author assumes that since artificial intelligence can plan and organize for us, our brains will regress. I disagree with the author's opinion.<br>
 &emsp;&emsp;I cling to the idea that even if intelligent machines are getting increasingly smarter, our world will never be like a scene from science fiction in which human brains are inferior. To begin with, no matter how superior its abilities are in certain areas, artificial intelligence needs us just as much as we need it. In other words, computer-based artificial intelligence has to rely on humans for maintenance to ensure its existence. What is more, face-to-face interactions between humans can never be replaced by machines. Intelligent machines are unlikely to develop human-like social competence, which requires empathy, sensitivity to tone, etc.<br>
 &emsp;&emsp;To sum up, concern about whether artificial intelligence will make our brains regress is caused by an overestimation of the impact of technology on humans.
 
