feat: add 050 of write

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -208,6 +208,29 @@ In this section, you are asked to write an essay based on the following chart. I
 &emsp;&emsp;这幅漫画的目的是告诉我们，在看似不可克服的挑战与困境面前，最重要的是拥有自信。无论一个人在学校或工作中曾经如何成功，总有一天他或她会遭遇难题。关键时刻,正是一个人对困难和人生的自信决定他或她能否反败为胜。<br>
 &emsp;&emsp;没有什么比下面的例子更有说服力。海伦·凯勒失去了听力和视力，没什么可以让她自信。但她不断克服多重障碍，最终成为一名作家和教师，成为世人的楷模。这个例子清楚证明了无论面临何种任务，我们决不能高估困难或低估自己的能力。
 
+## 050
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/50.jpg)
+
+### Example
+
+&emsp;&emsp;Nowadays, a large number of teenages have lost the right to play outside and instead indulge in computer use. In this excerpt, the author maintains that since parents have robbed their children of the opportunity to wander around, a good many youngsters use the computer to socialize with their friends. I agree with the writer's idea.<br>
+&emsp;&emsp;The primary factors that account for the aftrementioned phenomenon can be summarized as follows. On the one hand, school time can be a period of constant pressure for students. Stressors like upcoming examinations and endless assignments take up most of their life, leaving them less and less time for free play. On the other hand, in order not to let their children lose at the so-called starting line, many parents force their children to sttend various cram schools and interest classes, depriving them of the right to play with their peers. Therefore, may teenagers indulge in the fictitious world and feel reluctant to approach others.<br>
+&emsp;&emsp;Hence, parents should be sensible enough to give their children more freedom to play with their friends and classmates. Meanwhile, it is necessary for teenages to use technology in a reasonable way and refrain from overindulgence.
+
+### 译文
+
+&emsp;&emsp;现在，很多青少年都丧失了外出玩耍的权利并沉迷于电脑。在这篇选段中，作者认为由于父母剥夺了孩子们四处闲逛的机会，所以很多青少年使用电脑来和朋友们社交。我同意作者的观点。<br>
+&emsp;&emsp;造成上述现象的主要因素可以概括如下。一方面，学生时代对学生而言是一个压力不断的时期。即将来临的考试和无尽的作业等压力源占据了他们生活的大部分时间，他们可以自由玩耍的时间变得越来越少。另一方面，为了不让孩子输在所谓的起跑线上，很多父母强迫孩子上各种补习班和兴趣班，剥夺了他们与同龄人玩要的权利。因此，很多青少年沉迷于虚幻世界，不愿意与他人接近。<br>
+&emsp;&emsp;因此，父母应该足够理智，给孩子们更多自由去和朋友、同学玩耍。同时，青少年应该合理使用科技，避免过度沉迷。
+
 ## 051
 
 ### Directions
