--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -199,7 +199,7 @@ In this section, you are asked to write an essay based on the following chart. I
 ### Example
 
 &emsp;&emsp;It is symbolically illustrated in the cartoon that a striker is preparing to shoot at the goal defended by a goalkeeper on a footer field. In the goalkeeper's mind, he is so much smaller than he actually is that guarding the goal becomes an impossible mission. At the same time, the giant guard seems to fill up the whole goal in the attacking player's mind.<br>
-&emsp;&emsp;The purpose of the drawing is to show us that in the face of seemingly insurmountable challenges or predicaments, possessing self-confidence is of the utmost significance. Regardless of how much success one has had in school ar at work, there are bound to be times when he or she will encounter problems. It is at these critical times that one's self-confidence, toward difficulty and toward life in general, plays a crucial role in determining whether he or she can turn failure into victory.<br>
+&emsp;&emsp;The purpose of the drawing is to show us that in the face of seemingly insurmountable challenges or predicaments, possessing self-confidence is of the utmost significance. Regardless of how much success one has had in school or at work, there are bound to be times when he or she will encounter problems. It is at these critical times that one's self-confidence, toward difficulty and toward life in general, plays a crucial role in determining whether he or she can turn failure into victory.<br>
 &emsp;&emsp;I can think of no better illustration than the following one. Helen Keller was deaf and blind, certainly nothing to give her self-confidence. Nevertheless, she went on to conquer her multiple handicaps to finally become a writer and lecturer, and an inspiration to all. This case effectively illustrates that no matter what tasks we are confronted with, we should never overestimate the difficulties or underestimate our abilities.
 
 ### 译文
@@ -221,9 +221,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;Nowadays, a large number of teenages have lost the right to play outside and instead indulge in computer use. In this excerpt, the author maintains that since parents have robbed their children of the opportunity to wander around, a good many youngsters use the computer to socialize with their friends. I agree with the writer's idea.<br>
-&emsp;&emsp;The primary factors that account for the aftrementioned phenomenon can be summarized as follows. On the one hand, school time can be a period of constant pressure for students. Stressors like upcoming examinations and endless assignments take up most of their life, leaving them less and less time for free play. On the other hand, in order not to let their children lose at the so-called starting line, many parents force their children to sttend various cram schools and interest classes, depriving them of the right to play with their peers. Therefore, may teenagers indulge in the fictitious world and feel reluctant to approach others.<br>
-&emsp;&emsp;Hence, parents should be sensible enough to give their children more freedom to play with their friends and classmates. Meanwhile, it is necessary for teenages to use technology in a reasonable way and refrain from overindulgence.
+&emsp;&emsp;Nowadays, a large number of teenagers have lost the right to play outside and instead indulge in computer use. In this excerpt, the author maintains that since parents have robbed their children of the opportunity to wander around, a good many youngsters use the computer to socialize with their friends. I agree with the writer's idea.<br>
+&emsp;&emsp;The primary factors that account for the aforementioned phenomenon can be summarized as follows. On the one hand, school time can be a period of constant pressure for students. Stressors like upcoming examinations and endless assignments take up most of their life, leaving them less and less time for free play. On the other hand, in order not to let their children lose at the so-called starting line, many parents force their children to attend various cram schools and interest classes, depriving them of the right to play with their peers. Therefore, may teenagers indulge in the fictitious world and feel reluctant to approach others.<br>
+&emsp;&emsp;Hence, parents should be sensible enough to give their children more freedom to play with their friends and classmates. Meanwhile, it is necessary for teenagers to use technology in a reasonable way and refrain from overindulgence.
 
 ### 译文
 
