feat: update template

--- a/english/word/simple-word/markdown/p24-p26.md
+++ b/english/word/simple-word/markdown/p24-p26.md
@@ -96,7 +96,7 @@
     - n. 镇民，市民
 - friendship
     - n. 友谊，友好
-    - leadership n. 领导
+    - leadership n. 领导（地位）；领导班子；领导才能
     - partnership 合伙关系
 - wild [waɪld]
     - adj. 野生的；荒凉的
