--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -376,7 +376,7 @@ below:
 
 ### Directions
 Directions:<br>
-&emsp;&emsp;Suppose your class held a class meeting on contributing to Project Hope last weekend. Youwere assigned to write the minutes of the meeting. In your minutes, you should record the basicinformation, main content of the meeting, and other relevant information.<br>
+&emsp;&emsp;Suppose your class held a class meeting on contributing to Project Hope last weekend. You were assigned to write the minutes of the meeting. In your minutes, you should record the basic information, main content of the meeting, and other relevant information.<br>
 &emsp;&emsp;Write your answer in about 100 words on the ANSWER SHEET.<br>
 &emsp;&emsp;Do not use your own name in your minutes, use “Li Ming” instead.<br>
 
@@ -385,11 +385,11 @@ Directions:<br>
 <p align="center">Minutes of class meeting on "Contributing to Project Hope"</p>
 
 Time: 10 a.m. to 11 a.m. on December 14, 2025<br>
-Place: Root 102, the Student Recreation Center<br>
+Place: Room 102, the Student Recreation Center<br>
 Present: All members of the class<br>
 Presided by: Zhang Wei<br>
 Summary of the meeting:<br>
-&emsp;&emsp;I am attaching the minutes of the last class meeting for your review. The summary of the meeting on Contributing to Project Hope is as follows<br>
+&emsp;&emsp;I am attaching the minutes of the last class meeting for your review. The summary of the meeting on Contributing to Project Hope is as follows.<br>
 &emsp;&emsp;Firstly, moved by the noble cause of Project Hope and encouraged by what has been achieved so far, we agreed to contribute our part to the project by offering financial aid to a senior high school student in a remote area of Sichuan Province. Secondly, we will seek out a girl whose family cannot afford her education. Lastly, our plan is to pay for her tuition on an annual basis until she graduates from high school. We would like to remit our donation directly to a bank account opened by her family in her local area.<br>
 &emsp;&emsp;If you discover any errors or omissions in the minutes, please inform me.
 
