feat: add exam-tips of analyze-complex-sentence

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -22,8 +22,9 @@ Do not sign your own name at the end of the notice. Use “Postgraduates' Associ
 <p align="center">告 示</p>
 <p align="right">2010年1月9日</p>
 
-本校将于七月初举行关于全球化的国际研讨会，现招募志愿者。基本要求是熟悉本次会议的主题以及精通英语。其他要求包括良好的人际沟通能力熟悉我市的景点及历史、举止得体以及有较强的责任感。在国际会议或其他类似活动中具有相关经验者优先考虑。
-申请职位以及咨询面试相关信息，请致电86754321或发送邮件到postgr@ccc.edu.cn。欢迎垂询，谢绝来访。
+&emsp;&emsp;本校将于七月初举行关于全球化的国际研讨会，现招募志愿者。<br>
+&emsp;&emsp;基本要求是熟悉本次会议的主题以及精通英语。其他要求包括良好的人际沟通能力熟悉我市的景点及历史、举止得体以及有较强的责任感。在国际会议或其他类似活动中具有相关经验者优先考虑。<br>
+&emsp;&emsp;申请职位以及咨询面试相关信息，请致电86754321或发送邮件到postgr@ccc.edu.cn。欢迎垂询，谢绝来访。
 
 <p align="right">研究生会</p>
 
@@ -213,10 +214,10 @@ imperial city, is now a genuine metropolis. Looking forward to meeting you in Be
 
 ### 译文
 
-亲爱的保罗:
-得知你要来中国，我太高兴了!以下是我的一些建议。
-鉴于这是你第一次到访中国,我强烈推荐中国的首都北京。北京位于中国北方。作为政治文化、国际交流以及科技创新的中心，它吸引着来自全国各地的人才，同时向世界展示着中国的发展。
-至于旅游景点，我建议你参观故宫、长城和颐和园，这些景点都已被列入联合国《世界遗产名录》。可以说，北京这座曾经的古老皇城，如今已成为一座真正的大都市。期待在北京与你相见!
+&emsp;&emsp;亲爱的保罗:<br>
+&emsp;&emsp;得知你要来中国，我太高兴了!以下是我的一些建议。<br>
+&emsp;&emsp;鉴于这是你第一次到访中国,我强烈推荐中国的首都北京。北京位于中国北方。作为政治文化、国际交流以及科技创新的中心，它吸引着来自全国各地的人才，同时向世界展示着中国的发展。<br>
+&emsp;&emsp;至于旅游景点，我建议你参观故宫、长城和颐和园，这些景点都已被列入联合国《世界遗产名录》。可以说，北京这座曾经的古老皇城，如今已成为一座真正的大都市。期待在北京与你相见!
 
 <p align="right">李明</p>
 
