--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -160,7 +160,7 @@ In this section, you are asked to write an essay based on the following chart. I
 
 &emsp;&emsp;上面的图表清楚地揭示了过去七年中国的工程硕士招生录取人数急剧增长。1998 年招生人数较少，只有大约2500人。令人惊讶的是，到2004年，招生人数在不到七年的时间里达到了 3.5 万人以上。<br>
 &emsp;&emsp;促成上述变化的一些驱动因素可以概括如下。首先,中国在制造业方面变得异常活跃这使得对高素质工程师的需求增加。此外，就业市场的总体发展无法跟上大学毕业生人数的增加，这促使很多学生在校园里再待三年时间，为就业做更好的准备。<br>
-&emsp;&emsp;我们必须采取有效措施确保这一状况不会失控，同时鼓励学生选择那些就业市场上需憲爀菐頁的务既有理论知识又有实践技能的专业。
+&emsp;&emsp;我们必须采取有效措施确保这一状况不会失控，同时鼓励学生选择那些就业市场上需要的既有理论知识又有实践技能的专业。
 
 ## 048
 
@@ -438,9 +438,9 @@ Write an essay on the chart. In your essay, you should
 
 ### 译文
 
-&emsp;&emsp;上面的线状图清晰地显示了某市2014年至2016年体育馆的数量和锻炼人数。如该图所示锻炼人数从一百万人稳步增加到近两百万人,同时,体育馆数量从600座急剧增加到约860座啓宾挡长了约 260座。<br>
-&emsp;&emsp;几个因素促成了这一趋势。首先，随着都市生活节奏的加快和压力的不断增加，越来越多的人开始面临生理或心理问题。因此，相关部门建造了越来越多的体育馆。其次，对于健康地渴望很普遍。因此，人们各自选择慢跑、打篮球、游泳、滑冰、爬山或骑车作为日常锻炼氡扺方式，因为运动总能使他们更强壮、更精力充沛。<br>
-&emsp;&emsp;就我而言，每天一小时的锻炼通常使我感到更健康而且更有活力。此外，我保持均衡饮食，而且晚上11点之前上床睡觉。总之，所有这些做法可以保证我拥有健康的体魄和橥號乐的生活。
+&emsp;&emsp;上面的线状图清晰地显示了某市2014年至2016年体育馆的数量和锻炼人数。如该图所示锻炼人数从一百万人稳步增加到近两百万人,同时,体育馆数量从600座急剧增加到约860座，增长了约260座。<br>
+&emsp;&emsp;几个因素促成了这一趋势。首先，随着都市生活节奏的加快和压力的不断增加，越来越多的人开始面临生理或心理问题。因此，相关部门建造了越来越多的体育馆。其次，对于健康地渴望很普遍。因此，人们各自选择慢跑、打篮球、游泳、滑冰、爬山或骑车作为日常锻炼方式，因为运动总能使他们更强壮、更精力充沛。<br>
+&emsp;&emsp;就我而言，每天一小时的锻炼通常使我感到更健康而且更有活力。此外，我保持均衡饮食，而且晚上11点之前上床睡觉。总之，所有这些做法可以保证我拥有健康的体魄和快乐的生活。
 
 ## 058
 
