--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -214,7 +214,7 @@ imperial city, is now a genuine metropolis. Looking forward to meeting you in Be
 
 ### 译文
 
-&emsp;&emsp;亲爱的保罗:<br>
+亲爱的保罗:<br>
 &emsp;&emsp;得知你要来中国，我太高兴了!以下是我的一些建议。<br>
 &emsp;&emsp;鉴于这是你第一次到访中国,我强烈推荐中国的首都北京。北京位于中国北方。作为政治文化、国际交流以及科技创新的中心，它吸引着来自全国各地的人才，同时向世界展示着中国的发展。<br>
 &emsp;&emsp;至于旅游景点，我建议你参观故宫、长城和颐和园，这些景点都已被列入联合国《世界遗产名录》。可以说，北京这座曾经的古老皇城，如今已成为一座真正的大都市。期待在北京与你相见!
