update: Unit 8-1, Unit 12-2

--- a/math/advanced-mathematics/limits-and-continuity-of-functions/functions.tex
+++ b/math/advanced-mathematics/limits-and-continuity-of-functions/functions.tex
@@ -67,7 +67,7 @@
 
     \begin{enumerate}
         \item 单值函数可以一对一和多对一，多值函数是一对多
-        \item 判断单值函数和多值函数：铅直画线法——铅直线与$f(x)$至多有一个交点，则$f(x)$是单值函数
+        \item 判断单值函数和多值函数：铅直画线法—铅直线与$f(x)$至多有一个交点，则$f(x)$是单值函数
     \end{enumerate}
 
     \subsection{定理}
