update: Unit14-2, Unit15-1, Unit15-2

--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -247,7 +247,7 @@
     - vt. 印刷 n. 印刷品
     - printer n. 打印机
 - race
-    - n. 比赛，竞争；种族 v. 赛速度；参加比赛
+    - n. 种族；比赛，竞争 v. 赛速度；参加比赛
     - 洗完 face，系上 lace，迈开 pace，参加 race
     - 速度赛
         - Park run is not a race but a time trail.
