--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -127,7 +127,7 @@ In this section, you are asked to write an essay based on the following chart. I
 
 &emsp;&emsp;The bar chart above clearly reflects the survey of residents' exercising ways in a certain city. According
 to the data given above, the percentage of people exercising alone accounts for 54.3%, the largest in the four
-categories. The percentages of people exercising with friends, families, and by taking part in group activities take up
+categories. The percentages of people exercising with friends, families and by taking part in group activities take up
 47.7%, 23.9% and 15.8% respectively.<br>
 &emsp;&emsp;Several factors that account for the above-mentioned phenomena could be summarized as follows. To start
 with, the main reason for sports and exercise is to encourage a healthy lifestyle. Exercising and playing sports can
@@ -173,8 +173,8 @@ Accordingly, let us get prepared to embrace this irreversible trend.
 
 &emsp;&emsp;从上面的柱状图可以看出,从2018年到2020年,中国快递业务大幅增长。在这三年间快递包裹总件数从510亿激增至830亿。与此同时，农村地区的快递包裹总件数从
 120亿跃升至 300亿。<br>
-&emsp;&emsp;为什么如今快递业务发展得如此之快呢?可能有几个因素促成了这个现象。首先，电子商务和网上购物的普及为快递业务的发展打下了基础。其次，随着快递业务日趋成熟以及相关法律法规的完善，起初对快递持怀疑态度的人现在也已经相信快递是安全可靠的。快递业务的迅速发展无疑为中国经济的繁荣做出了贡献。<br>
-&emsp;&emsp;因此，让我们准备好欣然接受这一不可逆转的趋势吧。
+&emsp;&emsp;为什么如今快递业务发展得如此之快呢?可能有几个因素促成了这个现象。首先，电子商务和网上购物的普及为快递业务的发展打下了基础。其次，随着快递业务日趋成熟以及相关法律法规的完善，起初对快递持怀疑态度的人现在也已经相信快递是安全可靠的。<br>
+&emsp;&emsp;快递业务的迅速发展无疑为中国经济的繁荣做出了贡献。因此，让我们准备好欣然接受这一不可逆转的趋势吧。
 
 ## 047
 
