update: Unit 15-2, Unit 16-1, Unit 14-2, Unit 13-2

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -195,7 +195,7 @@ Surprisingly, it reached more than 35,000 in 2004, within no more than seven yea
 &emsp;&emsp;Some driving factors that contribute to the above-mentioned change may be summarized as follows. First and
 foremost, China has become particularly active in manufacturing, which has led to an increased demand for qualified
 engineers. In addition, the development of the job market on the whole cannot keep pace with the expansion of college
-graduates, which has obliged a large number of students to stay on campus for another three years to ge better prepared
+graduates, which has obliged a large number of students to stay on campus for another three years to get better prepared
 for their careers.<br>
 &emsp;&emsp;It is necessary for us to take effective measures to ensure this situation doesn't get out of hand, and
 encourage students to choose majors for which both theoretical knowledge and practical skills will be demanded in the
