--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -47,7 +47,7 @@ Dear Bob,<br>
 &emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write
 a letter to you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left
 a deep impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
-&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, You
+&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, you
 will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand
 of the places you would like to visit.<br>
 &emsp;&emsp;Please give my best regards to your family.<br>
