update: Unit 11-1, Unit 11-2, Unit 3-1

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -17,7 +17,7 @@ increase from 0.4 to 4 billion mobile-phone subscriptions in developing countrie
 remained steady at just under 1 billion.<br>
 &emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid
 increase in economic development happening in developing countries, the telecommunication industry in those countries
-has expanded greatly to meet the demand of globalization. As a result, the user base of mobile phones which can narrow
+has expanded greatly to meet the demand of globalization. As a result, the user base of mobile phones, which can narrow
 the distance between people and link the whole world together, grew at an incredible speed. On the other hand, the
 extremely advanced economy of developed countries means less potential in many aspects and their demand for further
 enlargement tends to saturate.<br>
